--- a/app/src/main/res/layout/activity_book_apointment.xml
+++ b/app/src/main/res/layout/activity_book_apointment.xml
@@ -103,7 +103,7 @@
         android:paddingBottom="10dp"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCartTIme"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCartLabTIme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAppNumber" />
@@ -134,7 +134,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextAppFullName" />
 
     <Button
-        android:id="@+id/buttonOrderCart"
+        android:id="@+id/buttonCartLabCheckout"
         android:layout_width="153dp"
         android:layout_height="56dp"
         android:layout_marginStart="42dp"
@@ -143,12 +143,12 @@
         android:background="@drawable/btn_bg"
         android:text="Book Appointment"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonbookBack"
+        app:layout_constraintEnd_toStartOf="@+id/buttonCLBack"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/buttonbookBack"
+        android:id="@+id/buttonCLBack"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="43dp"
@@ -157,11 +157,11 @@
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonOrderCart"
+        app:layout_constraintStart_toEndOf="@+id/buttonCartLabCheckout"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/buttonCartDate"
+        android:id="@+id/buttonCartLabDate"
         style="?android:spinnerStyle"
         android:layout_width="147dp"
         android:layout_height="54dp"
@@ -171,7 +171,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonCartTIme"
+        app:layout_constraintStart_toEndOf="@+id/buttonCartLabTIme"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -187,13 +187,13 @@
         android:textStyle="bold"
         app:flow_horizontalAlign="center"
         app:flow_verticalAlign="center"
-        app:layout_constraintBottom_toTopOf="@+id/buttonbookBack"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCLBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCartDate" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonCartLabDate" />
 
     <Button
-        android:id="@+id/buttonCartTIme"
+        android:id="@+id/buttonCartLabTIme"
         style="?android:spinnerStyle"
         android:layout_width="141dp"
         android:layout_height="55dp"
@@ -202,7 +202,7 @@
         android:text="10:00"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/buttonCartDate"
+        app:layout_constraintEnd_toStartOf="@+id/buttonCartLabDate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAppFees" />
 
@@ -220,10 +220,10 @@
         android:textStyle="bold"
         app:flow_horizontalAlign="center"
         app:flow_verticalAlign="center"
-        app:layout_constraintBottom_toTopOf="@+id/buttonOrderCart"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCartLabCheckout"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCartTIme" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonCartLabTIme" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
