--- a/app/src/main/res/layout/activity_cart_lab.xml
+++ b/app/src/main/res/layout/activity_cart_lab.xml
@@ -7,13 +7,14 @@
     android:background="@drawable/background"
     tools:context=".CartLabActivity">
 
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginBottom="26dp"
         android:text="HealthMate"
         android:textColor="@color/purple_200"
         android:textSize="34sp"
@@ -22,11 +23,11 @@
         app:layout_constraintStart_toStartOf="@+id/textViewCartTItle"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
         android:id="@+id/textViewCartTItle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="22dp"
         android:text="Lab test cart Item"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
@@ -36,82 +37,71 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/buttonOrderCart"
-        android:layout_width="156dp"
+        android:id="@+id/buttonCartLabCheckout"
+        android:layout_width="0dp"
         android:layout_height="52dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="46dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/btn_bg"
-        android:text="Order"
+        android:text="Checkout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonbookBack"
+        app:layout_constraintEnd_toStartOf="@+id/buttonCLBack"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/buttonbookBack"
-        android:layout_width="126dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="43dp"
-        android:layout_marginBottom="28dp"
+        android:id="@+id/buttonCLBack"
+        android:layout_width="0dp"
+        android:layout_height="52dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/btn_bg"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonOrderCart"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintStart_toEndOf="@+id/buttonCartLabCheckout"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/buttonCartDate"
+        android:id="@+id/buttonCartLabDate"
         style="?android:spinnerStyle"
-        android:layout_width="147dp"
-        android:layout_height="54dp"
+        android:layout_width="133dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="39dp"
         android:text="15/06/23"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.878"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCartTItle"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="139dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="25dp"
-        android:text="Pick Date"
-        android:textAlignment="center"
-        android:textColor="@color/yellowLight"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:flow_horizontalAlign="center"
-        app:flow_verticalAlign="center"
-        app:layout_constraintBottom_toTopOf="@+id/buttonOrderCart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/buttonCartDate"
-        app:layout_constraintTop_toBottomOf="@+id/listViewCart" />
+        app:layout_constraintStart_toEndOf="@+id/buttonCartLabTIme"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCartLabTotalCost" />
 
     <Button
-        android:id="@+id/buttonCartTIme"
+        android:id="@+id/buttonCartLabTIme"
         style="?android:spinnerStyle"
-        android:layout_width="141dp"
+        android:layout_width="0dp"
         android:layout_height="55dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="45dp"
         android:text="10:00"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/buttonCartDate"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCLBack"
+        app:layout_constraintEnd_toStartOf="@+id/buttonCartLabDate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCartTItle"
+        app:layout_constraintTop_toTopOf="@+id/textViewCartLabTotalCost"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="141dp"
-        android:layout_height="0dp"
+        android:layout_width="99dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="11dp"
         android:text="Pick Time"
         android:textAlignment="center"
         android:textColor="@color/yellowLight"
@@ -119,19 +109,54 @@
         android:textStyle="bold"
         app:flow_horizontalAlign="center"
         app:flow_verticalAlign="center"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="@+id/buttonCartTIme"
-        app:layout_constraintStart_toStartOf="@+id/buttonCartTIme"
-        app:layout_constraintTop_toTopOf="@+id/textView3" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonCLBack"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonCartLabDate" />
+
+    <TextView
+        android:id="@+id/textViewCartLabTotalCost"
+        android:layout_width="211dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="Total Amount: 0"
+        android:textAlignment="center"
+        android:textColor="@color/yellowLight"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:flow_horizontalAlign="center"
+        app:flow_verticalAlign="center"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCartLabDate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listViewCart" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="114dp"
+        android:layout_height="21dp"
+        android:layout_marginEnd="10dp"
+        android:text="Pick Date"
+        android:textAlignment="center"
+        android:textColor="@color/yellowLight"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:flow_horizontalAlign="center"
+        app:flow_verticalAlign="center"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/buttonCartLabDate"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ListView
         android:id="@+id/listViewCart"
-        android:layout_width="394dp"
-        android:layout_height="365dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="59dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewCartLabTotalCost"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCartTItle" />
