--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,13 +76,13 @@
         android:paddingBottom="10dp"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@+id/buttonOrderCart"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCartLabCheckout"
         app:layout_constraintEnd_toEndOf="@+id/editTextAppFullName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/editTextAppFullName" />
 
     <Button
-        android:id="@+id/buttonOrderCart"
+        android:id="@+id/buttonCartLabCheckout"
         android:layout_width="153dp"
         android:layout_height="54dp"
         android:layout_marginBottom="28dp"
@@ -101,7 +101,7 @@
         android:text="Register for new account"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/buttonOrderCart"
+        app:layout_constraintEnd_toEndOf="@+id/buttonCartLabCheckout"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/buttonOrderCart" />
+        app:layout_constraintStart_toStartOf="@+id/buttonCartLabCheckout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
